# Image-processing

./: README.md
Linear_method/: README.md
Linear_method/code_src/: CMakeLists.txt  Makefile  complexite.c  contour  contour1.c  contour2.c  courbe.py  eqm.py  essai1  essai2  essai2.c  gaussien.c  gaussienspatial.c  pgm.h  test_contour1.c  test_contour2.c  test_gaussien.c  test_gaussien_spatial.c  valeureqm.c
Linear_method/code_src/image/: contour1.pgm  contour1bruit.pgm  contour2.pgm  contour2bruit.pgm  formes2bb5gaussien.pgm  gaussspatialbb5result.pgm  res100contour.pgm  reschat.pgm
Non_linear_method/: README.md
