#cmake_minimum_required(VERSION 2.6)
#if(COMMAND cmake_policy)
#    cmake_policy(SET CMP0003 NEW)
#endif(COMMAND cmake_policy)

#project(code_src)
#enable_testing()
#set(CMAKE_BUILD_TYPE Debug)
#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wextra -Wconversion -std=gnu11 -fsanitize-address-use-after-scope")
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wconversion -std=gnu++11 -fsanitize-address-use-after-scope")
#add_executable(gaussien gaussien.c)


cmake_minimum_required(VERSION 3.14)
project(TP_Image C)

set(CMAKE_C_STANDARD 99)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
#set(CMAKE_BUILD_TYPE Debug)
#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wextra -Wconversion -std=gnu11 -fsanitize-address-use-after-scope")
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wconversion -std=gnu++11 -fsanitize-address-use-after-scope")
##if(EXISTS /usr/include/math.h)
##    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -I/usr/include/math.m")
##endif(EXISTS /usr/include/math.h)

add_library(libr SHARED fft.c pgm.c divers.c)

add_executable(essai1 essai1.c)
add_executable(essai2 essai2.c)
add_executable(gaussien gaussien.c)
add_executable(gaussienspatial gaussienspatial.c)
add_executable(laplacien laplacien.c)
add_executable(contour1 contour1.c)
add_executable(contour2 contour2.c)
add_executable(complexite complexite.c)
add_executable(test_contour2 test_contour2.c)
add_executable(test_contour1 test_contour1.c)
add_executable(test_gaussien test_gaussien.c)
add_executable(test_gaussien_spatial test_gaussien_spatial.c)
add_executable(testeqm valeureqm.c)

target_link_libraries(gaussien libr)
target_link_libraries(gaussien m)
target_link_libraries(gaussienspatial libr)
target_link_libraries(gaussienspatial m)
target_link_libraries(laplacien libr)
target_link_libraries(laplacien m)
target_link_libraries(contour2 libr)
target_link_libraries(contour2 m)
target_link_libraries(complexite libr)
target_link_libraries(complexite m)
target_link_libraries(test_contour2 libr)
target_link_libraries(test_contour2 m)
target_link_libraries(test_contour1 libr)
target_link_libraries(test_contour1 m)
target_link_libraries(test_gaussien libr)
target_link_libraries(test_gaussien m)
target_link_libraries(test_gaussien_spatial libr)
target_link_libraries(test_gaussien_spatial m)
target_link_libraries(testeqm libr)
target_link_libraries(testeqm m)